@@ -21,7 +21,7 @@
         <url>https://github.com/databricks/databricks-jdbc</url>
     </scm>
   <properties>
-    <arrow.version>10.0.1</arrow.version>
+    <arrow.version>13.0.0</arrow.version>
     <maven.compiler.source>11</maven.compiler.source>
     <maven.compiler.target>11</maven.compiler.target>
     <mockito.version>5.2.0</mockito.version>
@@ -32,19 +32,17 @@
     <google.findbugs.annotations.version>3.0.1</google.findbugs.annotations.version>
     <immutables.value.version>2.9.2</immutables.value.version>
     <httpclient.version>4.5.14</httpclient.version>
+    <log4japi.version>2.21.1</log4japi.version>
+    <log4jcore.version>2.21.1</log4jcore.version>
     <commons-io.version>2.13.0</commons-io.version>
+    <databricks-sdk.version>0.11.0</databricks-sdk.version>
+    <maven-surefire-plugin.version>3.1.2</maven-surefire-plugin.version>
   </properties>
-  <repositories>
-    <repository>
-      <id>databricks-jdbc-oss-local-repo</id>
-      <url>file://${basedir}/src/main/resources</url>
-    </repository>
-  </repositories>
   <dependencies>
     <dependency>
       <groupId>com.databricks</groupId>
       <artifactId>databricks-sdk-java</artifactId>
-      <version>0.6.0</version>
+      <version>${databricks-sdk.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.arrow</groupId>
@@ -54,6 +52,16 @@
     <dependency>
       <groupId>org.apache.arrow</groupId>
       <artifactId>arrow-vector</artifactId>
+      <version>${arrow.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>com.diffplug.spotless</groupId>
+      <artifactId>spotless-maven-plugin</artifactId>
+      <version>2.39.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.arrow</groupId>
+      <artifactId>arrow-memory-netty</artifactId>
       <version>${arrow.version}</version>
     </dependency>
     <dependency>
@@ -100,6 +108,16 @@
       <version>${slf4j.version}</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-api</artifactId>
+      <version>${log4japi.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>${log4jcore.version}</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>${jackson.version}</version>
@@ -139,6 +157,17 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>${maven-surefire-plugin.version}</version>
+          <configuration>
+            <argLine>
+              --add-opens=java.base/java.nio=ALL-UNNAMED
+              -Dnet.bytebuddy.experimental=true
+            </argLine>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-assembly-plugin</artifactId>
           <configuration>
             <archive>
@@ -161,6 +190,29 @@
               </configuration>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>2.39.0</version>
+          <executions>
+            <execution>
+              <id>format</id>
+              <goals>
+                <goal>apply</goal>
+              </goals>
+              <phase>compile</phase>
+            </execution>
+          </executions>
+          <configuration>
+            <sourceDirectory>src/</sourceDirectory>
+            <targetDirectory>src/</targetDirectory>
+            <java>
+              <googleJavaFormat>
+                <version>1.18.1</version>
+              </googleJavaFormat>
+            </java>
+          </configuration>
         </plugin>
       </plugins>
     </build>
